# whatsapp-logger

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
admin-panel/: pyproject.toml
admin-panel/src/functions/agent_status/: app.py
admin-panel/src/functions/configuration/: app.py
admin-panel/src/utils/: authentication.py  consts.py  dynamodb_models.py
admin-panel/tests/: conftest.py  test_agent_status.py  test_get_configuration.py  test_get_qr.py  utils.py
backend/iac/: component.py
backend/iac/constrcuts/: admin_panel.py  chatgpt_integration.py  collect_whatsapp_groups.py  configuration.py  dashboard.py  googlesheets_recorder.py  message_statistics.py  predefined_lambda.py  sns_sqs.py  state.py
backend/iac/utils/: cdk_utils.py
backend/src/admin_panel/functions/agent_status/: app.py
backend/src/admin_panel/functions/configuration/: app.py
backend/src/admin_panel/functions/messages_statistics/: app.py
backend/src/admin_panel/utils/: authentication.py
backend/src/chatgpt_integration/functions/chatgpt_call/: app.py
backend/src/chatgpt_integration/functions/delete_old_summary/: app.py
backend/src/chatgpt_integration/functions/send_summary_to_client/: app.py
backend/src/chatgpt_integration/functions/summerize_chats/: app.py
backend/src/chatgpt_integration/functions/write_chats_to_s3/: app.py
backend/src/chatgpt_integration/utils/: consts.py  models.py
backend/src/googlesheets_recorder/: app.py
backend/src/groups_collector/: app.py
backend/src/utils/: chats_data_lake.py  client.py  dynamodb_models.py  general.py  models.py
backend/src/utils/db_models/: application_state.py  whatsapp_groups.py
backend/tests/: conftest.py  utils.py
backend/tests/admin_panel/: test_agent_status.py  test_get_configuration.py  test_get_qr.py  test_message_statistics.py
backend/tests/chatgpt_call/: test_app.py
backend/tests/chatgpt_integration/: test_app.py
backend/tests/delete_old_summary/: test_app.py
backend/tests/googlesheets_recorder/: test_app.py
backend/tests/groups_collector/: test_app.py
backend/tests/send_summary_to_client/: test_app.py
cdk/: app.py  pyproject.toml
cdk/cdk/: admin_panel.py  cdk_utils.py  configuration.py  event_bus.py  googlesheets_recorder_stack.py  qr_viewer.py  shared_s3_bucket.py  whatsapp_listener_stack.py
googlesheets-recorder/: pyproject.toml
googlesheets-recorder/src/: app.py
googlesheets-recorder/tests/: test_app.py
qr-viewer/: pyproject.toml
qr-viewer/src/: app.py
qr-viewer/tests/: test_app.py
scripts/: export_aws.sh  gate.sh  run_whatsapp_listener_locally.sh
static_web/iac/: app.py  cdk.json  component.py
static_web/src/: index.html  script.js
whatsapp-web-listener/: Dockerfile  index.js  jest.config.js  package-lock.json  package.json
whatsapp-web-listener/cdk/: app.py
whatsapp-web-listener/cdk/cdk/: cdk_stack.py
whatsapp-web-listener/service/: index.js  package.json  utils.js
whatsapp-web-listener/src/: client.js  eventsExecuter.js  index.js  utils.js
whatsapp_web_listener/: .env-example  .eslintrc.json  package-lock.json  package.json
whatsapp_web_listener/iac/: component.py
whatsapp_web_listener/src/: client.js  eventsExecuter.js  index.js  utils.js
whatsapp_web_listener/test/: utils.spec.js
