[tool.poetry]
name = "admin-panel"
version = "0.1.0"
description = ""
authors = ["Efi MK"]

[tool.poe.tasks]
black = "black ."
lint = "ruff ."
pytest = "pytest"
mypy = "mypy ."
gate = ["black", "lint", "pytest", "mypy"]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.layer.dependencies]
boto3 = "^1.26.59"
dacite = "^1.8.0"
pynamodb = "^5.4.0"
aws-lambda-powertools = "^2.8.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.7.0"}
ruff = "^0.0.241"
pytest = "^7.2.1"
moto = "^4.1.2"
pyyaml = "^6.0"
mypy = "^1.0.0"
boto3-stubs = {extras = ["essential"], version = "^1.26.65"}
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
