[tool.poetry]
name = "cdk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"


[tool.poe.tasks]
black = "black ."
lint = "ruff ."
mypy = "mypy . --exclude cdk.out --exclude .build"
gate = ["black", "lint", "mypy"]


[tool.poe.tasks.deploy]
cmd = "cdk deploy --all -c email_identity=$email_identity"
args = [{ name = "email_identity", required = false, help = "SES email" }]

[tool.poe.tasks.destroy]
cmd = "cdk destroy --all -c email_identity=$email_identity"
args = [{ name = "email_identity", required = false, help = "SES email" }]

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.62.1"
constructs = ">=10.0.0,<11.0.0"
black = "^22.12.0"
aws-cdk-aws-lambda-python-alpha = "^2.62.1a0"
ruff = "^0.0.239"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
