[tool.poetry]
name = "googlesheets-recorder"
version = "0.1.0"
description = ""
authors = ["Efi Merdler-Kravitz"]
packages = [{include = "googlesheets_recorder"}]

[tool.poe.tasks]
black = "black ."
lint = "ruff ."
pytest = "pytest"
mypy = "mypy ."
gate = ["black", "lint", "pytest", "mypy"]


[tool.poetry.group.layer.dependencies]
dacite = "^1.8.0"
gspread = "^5.7.2"
boto3 = "^1.26.59"

[tool.poetry.dependencies]
python = "^3.9"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.7.0"}
pyproject-flake8 = "^6.0.0.post1"
pytest = "^7.2.1"
ruff = "^0.0.241"
mypy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
