[tool.poetry]
name = "qr-viewer"
version = "0.1.0"
description = ""
authors = ["Efi MK"]
readme = "README.md"
packages = [{include = "qr_viewer"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
