[tool.poetry]
name = "qr-viewer"
version = "0.1.0"
description = ""
authors = ["Efi MK"]
readme = "README.md"
packages = [{include = "qr_viewer"}]

[tool.poe.tasks]
black = "black src/app.py"
lint = "ruff src/app.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.layer.dependencies]
boto3 = "^1.26.59"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.7.0"}
ruff = "^0.0.241"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
